syntax = "proto3";
package transactionPoolpb;
import "github.com/dappley/go-dappley/core/transaction/pb/transaction.proto";


message TransactionPool{
    map<string, transactionpb.TransactionNode> txs = 1;
    repeated string tipOrder = 2;
    uint32 currSize = 3;
}


